--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat+Subrayada" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
   <link href="style.css" media="all" rel="stylesheet" type="text/css" />
   <link rel=”canonical” href=”http://127.0.0.1:5500/index.html” />
 </head>
@@ -55,7 +57,6 @@
           <div class="works-list">
             <a class="works-item" href="https://line.me/R/ti/p/@919tabij">
               <div class="element js-animation"><img src="images\omikuji.jpg" alt="画像2"></div> 
-              <!-- <p class="works-img"><img src="images\omikuji.jpg" alt="" /></p> -->
               <p class="works-name">おみくじLINEbot</p>
               <p class="works-info">Google Apps ScriptとJavaScriptを使ってLINEbotで大学生向けのおみくじアプリを作りました。
                 <br>画像または名前をクリックすれば友達追加ができます！
@@ -64,7 +65,6 @@
             </a>
             <a class="works-item">
               <div class="element js-animation"><img src="images\ToDo.jpg" alt="画像3"></div>
-              <!-- <p class="works-img"><img src="images\ToDo.jpg" alt="" /></p> -->
               <p class="works-name">ToDoリスト管理bot</p>
               <p class="works-info">Google Apps ScriptとGoogleカレンダーを連携し、JavaScriptを使ってLINEbotでToDoリストを管理してくれるbotを作りました。
                 <br>予定の追加や一日の予定の確認がすぐにできるようにし、加えて1週間の予定が毎朝リマインドされる機能を実装しました。
@@ -129,6 +129,7 @@
     <!-- /footer -->
 
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script type='text/javascript' src="script.js"></script>
 </body>
 </html>
